--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -1,6 +1,7 @@
 <?php
 $menuHelper = $this->applicationMenuHelper();
 $galleryHelper = $this->galleryHelper()->setLang($this->lang);
+$contactFormHelper = $this->contactFormHelper($this->contactForm);
 
 $assetPath = $this->basePath('absconsultor');
 $mediaPath = $this->basePath('media');
@@ -118,11 +119,10 @@ $mediaPath = $this->basePath('media');
             </div>
         </div>
 
-
         <div class="col-md-12 to-animate">
-            <form id="question_form" class="form-horizontal" action="/example" method="post">
-                <h3>Consulta Técnica</h3>
+            <form id="question_form" class="form-horizontal" action="<?=$this->basePath() . $this->formActionUrl;?>" method="post">
                 <div class="form-group">
+                    <h3>Consulta Técnica</h3>
                     <label for="question_name" class="sr-only">Nombre</label>
                     <div class="row">
                         <div class="col-sm-6">
@@ -178,6 +178,7 @@ $mediaPath = $this->basePath('media');
                 </div>
                 <div class="form-group">
                     <input class="btn btn-primary btn-lg" value="Enviar" type="submit">
+                    <input type="hidden" name="form_type" value="question">
                 </div>
             </form>
         </div>
@@ -338,48 +339,7 @@ $mediaPath = $this->basePath('media');
             </div>
 
             <div class="col-md-6 to-animate">
-                <form id="contact_form" class="form-horizontal" action="/example" method="post">
-                    <div class="form-group">
-                        <label for="name" class="sr-only">Nombre</label>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <input id="name" name="name" class="form-control" placeholder="Nombre" type="text">
-                            </div>
-                            <div class="col-sm-12 messages"></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="email" class="sr-only">Email</label>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <input id="email" name="email" class="form-control" placeholder="Email" type="email">
-                            </div>
-                            <div class="col-sm-12 messages"></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone" class="sr-only">Teléfono</label>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <input id="phone" name="phone" class="form-control" placeholder="Teléfono" type="text">
-                            </div>
-                            <div class="col-sm-12 messages"></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="message" class="sr-only">Mensaje</label>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <textarea name="message" id="message" cols="30" rows="5" class="form-control"
-                                          placeholder="Mensaje"></textarea>
-                            </div>
-                            <div class="col-sm-12 messages"></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <input class="btn btn-primary btn-lg" value="Enviar" type="submit">
-                    </div>
-                </form>
+                <?= $contactFormHelper->render($this->lang,$this->legal); ?>
             </div>
         </div>
     </div>
