--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -91,7 +91,7 @@ echo $this->doctype(); ?>
 
                 <?php /*$legalLinkHelper->render($this->legal,$this->lang);*/?>
             </div>
-            <div class="row">
+            <div class="row hide">
                 <div class="col-md-12 text-center small">
                     This site is protected by reCAPTCHA and the Google
                     <a target="_blank" href="https://policies.google.com/privacy">Privacy Policy</a> and
