--- a/html/absconsultor/css/style.css
+++ b/html/absconsultor/css/style.css
@@ -6564,16 +6564,17 @@ h1, h2, h3, h4, h5, h6 {
       text-decoration: none !important; }
 
 .abstpl-person {
-  padding: 80px 30px 30px 30px;
+  padding: 150px 30px 30px 30px;
   float: left;
   width: 100%;
-  position: relative; }
+  position: relative;
+  margin: 1em auto; }
   @media screen and (max-width: 992px) {
     .abstpl-person {
       margin-bottom: 3.5em; } }
   .abstpl-person figure {
     position: absolute;
-    margin-top: -60px;
+    margin-top: 0px;
     top: 0;
     left: 50%;
     margin-left: -90px;
