--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -101,8 +101,8 @@ $legalMessage = $this->legal['locale'][$this->lang][$legalLocaleId]['content'];
                 </div>
             </div>
         </div>
-        <div class="row row-bottom-padded-sm">
-            <?= $galleryHelper->renderFeatured($this->jobs['featured'], 'jobs-gallery'); ?>
+        <div class="galleries">
+            <?= $galleryHelper->renderFeatured($this->jobs, 'jobs-gallery'); ?>
         </div>
         <div class="row">
             <div class="col-xs-12 text-center">
@@ -220,8 +220,8 @@ $legalMessage = $this->legal['locale'][$this->lang][$legalLocaleId]['content'];
                 </div>
             </div>
         </div>
-        <div class="row row-bottom-padded-sm">
-            <?= $galleryHelper->withBorder()->renderFeatured($this->accessories['featured'], 'accessories-gallery'); ?>
+        <div class="galleries">
+            <?= $galleryHelper->withBorder()->renderFeatured($this->accessories, 'accessories-gallery'); ?>
         </div>
         <div class="row">
             <div class="col-xs-12 text-center">
