--- a/html/absconsultor/css/style.css
+++ b/html/absconsultor/css/style.css
@@ -6908,3 +6908,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .grecaptcha-badge {
   visibility: hidden; }
+
+.galleries {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
