--- a/html/absconsultor/sass/style.scss
+++ b/html/absconsultor/sass/style.scss
@@ -1401,3 +1401,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .grecaptcha-badge { visibility: hidden; }
+
+.galleries {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
