La paginacion ya es funcional

--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -225,7 +225,7 @@ $legalMessage = $this->legal['locale'][$this->lang][$legalLocaleId]['content'];
         </div>
         <div class="row">
             <div class="col-xs-12 text-center">
-                <a href="<?=$accessoriesUrl;?>" class="btn btn-primary js-show-more-gallery">Ver más accesorios</a>
+                <a href="<?=$accessoriesUrl;?>" class="btn btn-primary js-show-more-gallery" data-section-id="abstpl-accessories">Ver más accesorios</a>
             </div>
         </div>
 
