--- a/data/module/Application/view/application/gallery/index.phtml
+++ b/data/module/Application/view/application/gallery/index.phtml
@@ -1,3 +1,3 @@
 <?php
 $galleryHelper = $this->galleryHelper()->setLang($this->lang);
-$galleryHelper->renderFeatured($this->jobs, $this->galleryType);
+$galleryHelper->renderFeatured($this->gallery, $this->galleryType);
