--- a/data/module/Application/view/application/home/index.phtml
+++ b/data/module/Application/view/application/home/index.phtml
@@ -212,7 +212,7 @@ $legalMessage = $this->legal['locale'][$this->lang][$legalLocaleId]['content'];
 
         <div class="row">
             <div class="col-md-12 section-heading text-center">
-                <h2 class="to-animate">ACCESORIOS</h2>
+                <h2 class="to-animate">REPUESTOS</h2>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 subtext to-animate">
                         <h3><?= $this->accessoriesIntro; ?></h3>
@@ -225,7 +225,7 @@ $legalMessage = $this->legal['locale'][$this->lang][$legalLocaleId]['content'];
         </div>
         <div class="row">
             <div class="col-xs-12 text-center">
-                <a href="<?=$accessoriesUrl;?>" class="btn btn-primary js-show-more-gallery" data-section-id="abstpl-accessories">Ver más accesorios</a>
+                <a href="<?=$accessoriesUrl;?>" class="btn btn-primary js-show-more-gallery" data-section-id="abstpl-accessories">Ver más repuestos</a>
             </div>
         </div>
 
